--- a/lesson18.css
+++ b/lesson18.css
@@ -15,7 +15,7 @@ header{
 
 }
 header h1{
-    color: #eee;
+    color: greenyellow;
     padding: 0;
     margin: 0;
     font-size: 1.5rem;
@@ -66,17 +66,21 @@ header h1{
 }
 .movie-info h3{
     margin-top: 0;
+    color: red;
+    box-shadow: 0px 0px 4px 4px orange;
+    font-size: 20px;
 }
 .movie-info span{
     background-color: var(--primary-color);;
 }
 
 .overview{
-    background-color: #fff;
+    background-color: greenyellow;
     padding: 2rem;
     position: absolute;
     left: 0;
     right: 0;
+    color: black;
     bottom: 0;
     max-height: 100%;
 transform: translateY(101%);
